owncloud/mysql-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
  namespace: owncloud
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7

        ports:
        - containerPort: 3306
          name: mysql
          protocol: TCP

        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql

      volumes:
      - name: mysql
        persistentVolumeClaim:
          claimName: mysql
