owncloud/mysql-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
  labels:
    app: mysql
  namespace: owncloud
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
  selector:
    app: mysql
